--- a/shopping-cart/views/layouts/layout.hbs
+++ b/shopping-cart/views/layouts/layout.hbs
@@ -6,6 +6,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
+    {{> header}}
     {{{body}}}
     <script
   src="https://code.jquery.com/jquery-1.12.4.min.js"
