--- a/shopping-cart/views/shop/index.hbs
+++ b/shopping-cart/views/shop/index.hbs
@@ -1,2 +1,15 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+
+<div class="row">
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="https://lh3.googleusercontent.com/LpLq5h0zsIAgfCDP2YSE1iVnVL8TGU-DTqjwWxRfEzg4brlwVSGFRdOn4aNQlrTeOwemoBELywmkV0du6eUnrG-OrKlKpHDwKo3Z6PHtT3Xl471gTSWRtvjPt2p7e6R8oLQwvSleCWe-40HJDOGWmxQ92tXT2tMmqeMCfkd3V8rnsb4L5rBGz4HBugydtpL2Upo9FFJM1oUv0Q_MI_OayySid2TSEzybLRUt9Kacqi2L9CL0eQnmMlw0I5TMI_WdyYrb27HEvWUys3x94gTfKbkggLWGVVTdKrLTeb-ftUdyQ3VpA_ltKfguKGR-Sp3jkCW50Ns4mKMBfO4eaMyeTAZRtAQLMKBQYKVzuWh51b48O8IdeGPdYqrZDN3UlyA5rpwY24NLm58hayFY3WRZzlOWEbC8XsLfoCUcwjIxmIqiSrcGyPx7SRxdgNxU5fMVf72sX9E0zC6uvMI9AciSCNdRojIulS_9SIv_Sv2qa12RRlOQRGY0tBZnY7E-zjYOm97dobDAzVRZXRhqU3KQbIE5pOlmX4rFdjMvIHyoF6M5kjs9eIvAt7g3gKLJUdK3YaCL3a3TdhLheGbnX-PELYYHMmyuIcjR1V8B7w5LYDKdgBZ24x7a8Q-tMwPSNlSk-JTP89meSLpt9-CDiyBCOa5fhrSS0iE=w459-h413-no" alt="...">
+      <div class="caption">
+        <h3>Thumbnail label</h3>
+        <p>...</p>
+        <p><a href="#" class="btn btn-primary" role="button">
+              Button</a> <a href="#" class="btn btn-default" 
+              role="button">Button</a></p>
+      </div>
+    </div>
+  </div>
+</div>
