--- a/shopping-cart/views/user/signup.hbs
+++ b/shopping-cart/views/user/signup.hbs
@@ -1,8 +1,8 @@
 <div class="row">
    <div class="col-md-4 col-md-offset-4">
          <h1>Sign Up</h1>
-         Valodation Errors
-         <form action="" method="POST">
+         Validation Errors
+         <form action="/user/signup" method="POST">
                <div class="form-group">
                      <label for="email">E-Mail</label>
                      <input type="text" name="email" id="email" class="form-control">
@@ -11,8 +11,11 @@
                      <label for="password">Password</label>
                      <input type="text" name="email" id="email" class="form-control">
                </div>
-               <button type="submit">Sign Up</button>
+               <input type="hidden" name="_csrf" value="{{ csrfToken }}">
+               <button type="submit" class="btn btn-primary">Sign Up</button>
          </form>
+
+      
 
    </div>
 
