--- a/shopping-cart/views/user/signup.hbs
+++ b/shopping-cart/views/user/signup.hbs
@@ -1,8 +1,14 @@
 <div class="row">
    <div class="col-md-4 col-md-offset-4">
          <h1>Sign Up</h1>
-         Validation Errors
-         <form action="/user/signup" method="POST">
+         {{#if hasErrors}}
+           <div class=".alert.alert-danger">
+                {{# each messages }} 
+                   <p>{{this}}</p>
+                {{/each}} 
+           </div> 
+         {{/if}}
+         <form action="/user/signup" method="P0OST">
                <div class="form-group">
                      <label for="email">E-Mail</label>
                      <input type="text" name="email" id="email" class="form-control">
