--- a/shopping-cart/views/user/signin.hbs
+++ b/shopping-cart/views/user/signin.hbs
@@ -15,10 +15,10 @@
                </div>
                <div class="form-group">
                      <label for="password">Password</label>
-                     <input type="text" name="email" id="email" class="form-control">
+                     <input type="password" name="password" id="password" class="form-control">
                </div>
                <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-               <button type="submit" class="btn btn-primary">Sign Up</button>
+               <button type="submit" class="btn btn-primary">Sign In</button>
          </form>
 
       
