--- a/shopping-cart/views/shop/shopping-cart.hbs
+++ b/shopping-cart/views/shop/shopping-cart.hbs
@@ -9,7 +9,7 @@
             <span class="label label-success">${{ this.price }}</span>
             <div class="btn-group">
             <button class="btn btn-primary btn-xs dropdown-toggle" 
-               type="button">Action <span class="caret"></span></span></button>
+               type="button" data-toggle="dropdown">Action <span class="caret"></span></span></button>
               <ul class="dropdown-menu">
                   <li><a href="#">Reduce by 1</a></li>
                   <li><a href="#">Remove All</a></li>
