--- a/shopping-cart/views/partials/header.hbs
+++ b/shopping-cart/views/partials/header.hbs
@@ -33,6 +33,6 @@
                     </ul>
                 </li>
             </ul>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
+        </div>
+    </div>
 </nav>
