--- a/shopping-cart/views/shop/checkout.hbs
+++ b/shopping-cart/views/shop/checkout.hbs
@@ -1,8 +1,8 @@
 <div class="row">
       <div class="col-sm-6 col-md-4 col-md-offset-4 col-sm-offset-3">
             <h1>Checkout</h1>
-            <h4>Your Total: $</h4>
-            <form action="/" method="post" id="checkout-form">
+            <h4>Your Total: ${{total}}</h4>
+            <form action="/checkout" method="post" id="checkout-form">
             <div class="row">
              <div class="col-xs-12">
                <div class="form-group">
@@ -39,11 +39,12 @@
              </div>
                    <div class="col-xs-6">
                      <div class="form-group">
-                     <label for="card-expiry-year">Expiry Year</label>
+                     <label for="card-expiry-year">Expiration Year</label>
                      <input type="text" id="card-expiry-year" class="form-control" required>
                      </div>
                    </div>
                    </div>
+             </div>
             <div class="col-xs-12">
                   <div class="form-group">
                         <label for="card-cvc">CVC</label>
