--- a/shopping-cart/views/shop/shopping-cart.hbs
+++ b/shopping-cart/views/shop/shopping-cart.hbs
@@ -31,7 +31,7 @@
 <hr>
 <div class="row">
       <div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
-      <button type="button" class="btn btn-success">Chekout</button>  
+      <a href="/checkout" type="button" class="btn btn-success">Chekout</a>  
       </div>
 </div>
 {{ else }}
